# pd-graphiti-service

./: .gitignore  NOTICE  README.md  main.py  pyproject.toml  pytest.ini  setup_env.sh  test_phase_41_integration.py  todo_list.md  transfer_prompt.md
docker/: Dockerfile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.portable.yml  docker-compose.prod.yml  docker-compose.yml  monitor_progress.sh  setup-paths.sh  start-service.sh
kubernetes/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  10-neo4j-storage.yaml  11-neo4j-statefulset.yaml  12-neo4j-service.yaml  20-pd-graphiti-deployment.yaml  21-pd-graphiti-service.yaml  22-pd-graphiti-ingress.yaml  30-hpa.yaml  40-servicemonitor.yaml  README.md
src/pd_graphiti_service/: config.py  config_validation.py  file_monitor.py  graphiti_client.py  ingestion_service.py  logging_config.py  main.py  monitoring.py
src/pd_graphiti_service/api/: endpoints.py  health.py
src/pd_graphiti_service/models/: __init__.py
src/pd_graphiti_service/models/requests/: __init__.py  health.py  ingestion.py
src/pd_graphiti_service/models/responses/: __init__.py  health.py  ingestion.py  status.py
src/pd_graphiti_service/services/: __init__.py
tests/: conftest.py  test_config.py  test_file_monitor.py  test_graphiti_client.py  test_ingestion_service.py  test_models.py
tests/api/: test_api_endpoints.py
tests/performance/: README.md  __init__.py  conftest.py
